--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -377,6 +377,7 @@
     <string name="licenses">Licenses</string>
     <string name="contact_us">Contact Us</string>
     <string name="album_art">Album Art</string>
+    <string name="start_playback_to_activate_ab_repeat">Start playback to activate A-B repeat.</string>
 
 
 </resources>
